# data-loader

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  search.html
.github/workflows/: ci.yml
_ref/climatebenchpress/data_loader/: index.html
_ref/climatebenchpress/data_loader/canon/: index.html
_ref/climatebenchpress/data_loader/cf/: index.html
_ref/climatebenchpress/data_loader/datasets/abc/: index.html
_ref/climatebenchpress/data_loader/datasets/all/: index.html
_ref/climatebenchpress/data_loader/datasets/cams/: index.html
_ref/climatebenchpress/data_loader/datasets/cmip6/abc/: index.html
_ref/climatebenchpress/data_loader/datasets/cmip6/access_atmos/: index.html
_ref/climatebenchpress/data_loader/datasets/cmip6/access_ocean/: index.html
_ref/climatebenchpress/data_loader/datasets/cmip6/all/: index.html
_ref/climatebenchpress/data_loader/datasets/cmip6/canesm5_atmos/: index.html
_ref/climatebenchpress/data_loader/datasets/cmip6/canesm5_ocean/: index.html
_ref/climatebenchpress/data_loader/datasets/cmip6/ukesm_atmos/: index.html
_ref/climatebenchpress/data_loader/datasets/cmip6/ukesm_ocean/: index.html
_ref/climatebenchpress/data_loader/datasets/era5/: index.html
_ref/climatebenchpress/data_loader/datasets/esa_biomass_cci/: index.html
_ref/climatebenchpress/data_loader/datasets/ifs_humidity/: index.html
_ref/climatebenchpress/data_loader/datasets/ifs_uncompressed/: index.html
_ref/climatebenchpress/data_loader/datasets/nextgems/: index.html
_ref/climatebenchpress/data_loader/download/: index.html
_ref/climatebenchpress/data_loader/monitor/: index.html
data/: cmip6.py
data/cmip6/: .gitignore  download.py
datasets/: .gitignore
docs/: requirements.txt
scripts/: cmip6-access.py  cmip6-canesm5.py  cmip6-ukesm.py  cmip6.py  cmip6_tiny.py  era5.py  era5_tiny.py
search/: search_index.json
src/climatebenchpress/data_loader/: __init__.py  canon.py  cf.py  cmip6.py  download.py  monitor.py  vfs.py
src/climatebenchpress/data_loader/datasets/: abc.py  all.py  cams.py  era5.py  esa_biomass_cci.py  ifs_humidity.py  ifs_uncompressed.py  nextgems.py
src/climatebenchpress/data_loader/datasets/cmip6/: __init__.py  abc.py  access.py  access_atmos.py  access_ocean.py  access_ta.py  access_tos.py  all.py  canesm5.py  canesm5_atmos.py  canesm5_ocean.py  canesm5_ta.py  canesm5_tos.py  ukesm.py  ukesm_atmos.py  ukesm_ocean.py  ukesm_ta.py  ukesm_tos.py
tests/: test_virtual.py
