[project]
name = "climatebenchpress.data_loader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cf-xarray~=0.10.0",
    "cftime~=1.6.0",
    "dask>=2024.12.0,<2025.4",
    "fsspec>=2024.10.0,<2025.4",
    "healpy~=1.18.0",
    # These versions need to be pinned to be compatible with the NextGEMS
    # catalog at https://data.nextgems-h2020.eu/online.yaml.
    "intake==0.7.0",
    "intake-xarray==0.7.0",
    "requests~=2.32.3",
    # Setuptools is added to ensure compatibility with intake-xarray version 0.7.0.
    # intake-xarray is relying on distutils which was removed from Python 3.12.
    "setuptools~=75.8.2",
    "tqdm~=4.67.1",
    "typed-classproperties~=1.1.0",
    "xarray>=2024.11.0,<2025.4",
    "zarr~=3.0.0",
]

optional-dependencies.data = [
    "aiohttp~=3.11.0",
    "netcdf4~=1.7.2",
    "pandas~=2.2.0",
]

[dependency-groups]
dev = [
    "ipykernel~=6.29",
    "mypy~=1.14",
    "pandas-stubs~=2.2.0",
    "pytest~=8.3",
    "ruff~=0.8",
    "types-requests~=2.32.0.20241016",
    "types-tqdm~=4.67.0.20250301",
    "universal-pathlib~=0.2.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"climatebenchpress.compressor" = ["py.typed"]

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]

[[tool.mypy.overrides]]
module = ["fsspec.*", "intake.*", "healpy.*"]
follow_untyped_imports = true
